[package]
name = "leader-stream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
flate2 = "1"
futures-util = "0.3"
maxminddb = "0.27"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = "1"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tar = "0.4"
url = "2"
dotenvy = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "CssStyleDeclaration",
    "DomStringMap",
    "DomTokenList",
    "Document",
    "DocumentFragment",
    "Element",
    "Event",
    "EventSource",
    "EventTarget",
    "FocusEvent",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTableCellElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "UrlSearchParams",
    "Window",
] }

[dev-dependencies]
assert_cmd = "2"
http-body-util = "0.1"
portpicker = "0.1"
tower = "0.5"
